cmake_minimum_required(VERSION 3.22)
project(algorithm_practical_training_camp)

set(CMAKE_CXX_STANDARD 14)


add_executable(uva101 part02-linear-table/uva101.cpp)
add_executable(uva12657 part02-linear-table/uva12657.cpp)
add_executable(p1739 part03-stack-queue/p1739.cpp)
add_executable(uva11988 part02-linear-table/uva11988.cpp)
add_executable(uva514 part03-stack-queue/uva514.cpp)
add_executable(uva442 part03-stack-queue/uva442.cpp)
add_executable(uva12100 part03-stack-queue/uva12100.cpp)
add_executable(p1138 part04-array/p1138.cpp)
add_executable(P2550 part04-array/P2550.cpp)
add_executable(p1320 part04-array/p1320.cpp)
add_executable(p1830 part04-array/p1830.cpp)